--- a/foundations/flex/05-flex-modal/index.html
+++ b/foundations/flex/05-flex-modal/index.html
@@ -9,12 +9,22 @@
   </head>
   <body>
     <div class="modal">
+
       <div class="icon">!</div>
-      <div class="header">Are you sure you want to do that?</div>
+      <div class="wrap">
+      <div class="wrap header">Are you sure you want to do that?
       <button class="close-button">✖</button>
+    </div>
+
       <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur excepturi id soluta, numquam minima rerum doloremque eveniet aspernatur beatae commodi. Cupiditate recusandae ad repellendus quidem consectetur sequi amet aspernatur cumque!</div>
+     
+    <div class="wrap button">
       <button class="continue">Continue</button>
       <button class="cancel">Cancel</button>
+      </div>
+
+      </div>
+      </div>
     </div>
   </body>
 </html>
